--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 jdk: openjdk11
-script: 
+script: echo 'hello world'
     - mvn clean install test
 after_success:
     - mvn jacoco:report coveralls:report
