--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ jdk: openjdk11
 script:
     - mvn clean install test
 after_success:
-    - mvn jacoco:report coveralls:report
+    - mvn spotbugs:spotbugs
